# password-manager

./: .gitignore  pyproject.toml
.github/: renovate.json
.github/workflows/: linter.yml
src/password_manager/: __init__.py  main.py  manage.py
src/password_manager/models/: base.py  database.py  model.py  password.py
src/password_manager/templates/: main.py
src/password_manager/views/: hasher.py  password.py
