[project]
name = "password_manager"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cryptography==43.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start = "password_manager:main"

[tool.uv]
dev-dependencies = [
  "mypy==1.13",
  "pre-commit==4.0.1",
  "ruff==0.7.2"
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
lint.select = ["ALL"]
lint.ignore = [
  "D",      # FIXME: docs
  "DTZ003", # Allow naive datetimes
  "FBT001", # Allow boolean function args
  "FBT002", # Allow boolean traps
  "G004",   # Allow using f-strings when logging
  "T201",   # This is a cli
]

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true
