[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "password-manager"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cryptography==44.0.2",
  "sqlmodel==0.0.24",
]
scripts.manage = "password_manager:manage"
scripts.start = "password_manager:main"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
lint.select = [ "ALL" ]
lint.ignore = [
  "D",      # FIXME: docs
  "DTZ003", # Allow naive datetimes
  "FBT001", # Allow boolean function args
  "FBT002", # Allow boolean traps
  "G004",   # Allow using f-strings when logging
  "T201",   # This is a cli
]

[tool.pyproject-fmt]
keep_full_version = true

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true

[tool.uv]
dev-dependencies = [
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "ruff==0.9.10",
]
